# Tensor-Auto-Grad

./: .pre-commit-config.yaml  README.md  playground.ipynb  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
tensor/: __init__.py  tensor.py
tests/: test_tensor.py  test_tensor_autograd.py  test_tensor_constructor.py  test_tensor_indexing.py  test_tensor_operations.py  test_tensor_properties.py  test_tensor_utils.py
