[build-system]
requires = ["setuptools>=61.0"] # Specify minimum setuptools version
build-backend = "setuptools.build_meta"

[project]
name = "tensor"
version = "0.1.0"
description = "A simple tensor library with automatic differentiation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Florian Dreyer", email = "florian.dreyer03@icloud.com" }
]
# Add runtime dependencies here, e.g.:
dependencies = [
  "numpy>=1.24",
]

# Optional dependencies (e.g., for testing)
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

# [project.urls] # Optional: Links for users
# Homepage = "https://github.com/yourusername/tensor-auto-grad"
# Repository = "https://github.com/yourusername/tensor-auto-grad"

# You might add tool-specific configurations below, e.g., for linters or formatters
# [tool.ruff]
# ...
