[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor"
version = "0.1.0"
description = "A simple tensor library with automatic differentiation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Florian Dreyer", email = "florian.dreyer03@icloud.com" }
]
# Add runtime dependencies here, e.g.:
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.urls]
# Homepage = "https://github.com/yourusername/tensor-auto-grad"
 Repository = "https://github.com/florian-dreyer/tensor-auto-grad"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "PL", "PT"]
ignore = []

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
