[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor"
version = "0.1.0"
description = "A simple tensor library with automatic differentiation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Florian Dreyer", email = "florian.dreyer03@icloud.com" }
]
# Add runtime dependencies here, e.g.:
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "jupyter",
]

[project.urls]
# Homepage = "https://github.com/yourusername/tensor-auto-grad"
 Repository = "https://github.com/florian-dreyer/tensor-auto-grad"

[tool.ruff]
line-length = 88
required-version = "0.4.4"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "PT"]
ignore = ["PLR2004", "PT011"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.10"
exclude = ["^build/"]
warn_return_any = false  # We use Any for indexing operations
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
